Use Gradle 8.4 builder image to satisfy Spring Boot Gradle plugin

--- a/api/milha/Dockerfile
+++ b/api/milha/Dockerfile
@@ -1,5 +1,6 @@
 # Build stage
-FROM gradle:7.6-jdk17 AS builder
+# Use Gradle 8.x which is required by Spring Boot plugin
+FROM gradle:8.4-jdk17 AS builder
 WORKDIR /app
 COPY . .
 RUN gradle build -DskipTests
