--- a/api/milha/Dockerfile
+++ b/api/milha/Dockerfile
@@ -2,8 +2,20 @@
 # Use Gradle 8.x which is required by Spring Boot plugin
 FROM gradle:8.4-jdk17 AS builder
 WORKDIR /app
-COPY . .
-RUN gradle build -DskipTests
+
+# Copy gradle wrapper and build.gradle first for better caching
+COPY build.gradle settings.gradle gradlew gradlew.bat ./
+COPY gradle/ ./gradle/
+
+# Download dependencies
+RUN ./gradlew --version
+
+# Copy source code
+COPY src/ ./src/
+COPY bin/ ./bin/
+
+# Build the application
+RUN ./gradlew build -DskipTests
 
 # Runtime stage
 # Use Eclipse Temurin JDK which is widely available on Docker Hub
